--- a/src/components/ProjectCard.astro
+++ b/src/components/ProjectCard.astro
@@ -3,6 +3,7 @@ import Link from '@/components/Link.astro'
 import { Badge } from '@/components/ui/badge'
 import { Image } from 'astro:assets'
 import type { CollectionEntry } from 'astro:content'
+import { Icon } from 'astro-icon/components'
 
 type Props = {
   project: CollectionEntry<'projects'>
@@ -11,17 +12,52 @@ type Props = {
 const { project } = Astro.props
 ---
 
+<style>
+  .placeholder {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    opacity: 1;
+    transition: opacity 0.5s ease-in-out;
+    position: relative;
+    z-index: 1;
+  }
+  .zoomable-image {
+    opacity: 0;
+    transition: opacity 0.5s ease-in-out;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 2;
+  }
+  .zoomable-image.loaded {
+    opacity: 1;
+  }
+</style>
+
 <div
   class="hover-card overflow-hidden rounded-xl border"
 >
   <Link href={project.data.link} class="block" external>
-    <Image
-      src={project.data.image}
-      alt={project.data.name}
-      width={400}
-      height={200}
-      class="w-full object-cover rounded-xl"
-    />
+    <div class="relative">
+      <div
+        class="placeholder rounded-xl bg-gray-200 dark:bg-gray-900 aspect-[1200/630]"
+        id={`placeholder-${project.slug}`}
+      >
+        <div class="w-full h-full rounded-xl bg-gray-200 dark:bg-gray-900 flex items-center justify-center">
+          <Icon name="lucide:image" class="h-10 w-10 text-gray-400 dark:text-gray-700" />
+        </div>
+      </div>
+      <Image
+        src={project.data.image}
+        alt={project.data.name}
+        width={1200}
+        height={630}
+        class="zoomable-image w-full object-cover rounded-xl absolute top-0 left-0"
+        loading="lazy"
+        onload="this.classList.add('loaded');"
+      />
+    </div>
     <div class="p-4">
       <h3 class="mb-1 text-xl font-black leading-none break-words hyphens-auto">{
         project.data.name}
