--- a/src/pages/posts/[...slug].astro
+++ b/src/pages/posts/[...slug].astro
@@ -75,6 +75,29 @@ const nextPost = getNextPost(currentPostSlug);
 const prevPost = getPrevPost(currentPostSlug);
 ---
 
+<style>
+  .placeholder {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    opacity: 1;
+    transition: opacity 0.5s ease-in-out;
+    position: relative;
+    z-index: 1;
+  }
+  .zoomable-image {
+    opacity: 0;
+    transition: opacity 0.5s ease-in-out;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 2;
+  }
+  .zoomable-image.loaded {
+    opacity: 1;
+  }
+</style>
+
 <Layout
   title={post.data.title}
   description={post.data.description}
@@ -90,18 +113,28 @@ const prevPost = getPrevPost(currentPostSlug);
       ]}
       class="col-start-2"
     />
-    {
-      post.data.image && (
-        <Image
-          src={post.data.image}
-          alt={post.data.title}
-          width={300}
-          height={157.5}
-          class="col-span-full mx-auto w-full max-w-[300px] object-cover rounded-xl post-thumbnail"
-          style="padding-left: 0 !important; padding-right: 0!important; border-radius: 0.75rem !important;"
-        />
-      )
-    }
+    {post.data.image && (
+    <div class="relative col-span-full mx-auto w-full max-w-[300px]" style="padding-left: 0 !important; padding-right: 0!important;">
+      <div
+        class="aspect-[300/157.5] placeholder rounded-xl bg-gray-200 dark:bg-gray-900 absolute top-0 left-0 w-full h-full"
+        id={`placeholder-${post.data.title}`}
+      >
+        <div class="w-full h-full rounded-xl bg-gray-200 dark:bg-gray-900 flex items-center justify-center">
+          <Icon name="lucide:image" class="h-10 w-10 text-gray-400 dark:text-gray-700" />
+        </div>
+      </div>
+      <Image 
+        src={post.data.image}
+        alt={post.data.title}
+        width={300}
+        height={157.5}
+        class="zoomable-image w-full h-full object-cover rounded-xl absolute top-0 left-0"
+        loading="lazy"
+        style="border-radius: 0.75rem !important;"
+        onload={`document.getElementById('placeholder-${post.data.title}').classList.add('hidden'); this.classList.add('loaded');`}
+      />
+    </div>
+    )}
     <section class="col-start-2 flex flex-col gap-y-6 text-center">
       <div class="flex flex-col gap-y-4">
         <h1 class="text-5xl font-black leading-none sm:text-6xl sm:leading-[0.9] -mx-8">
