feat: lazy load navbar dropdowns & gtag

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -37,9 +37,9 @@ import { NAV_LINKS, SITE } from '@/consts'
             ))
           }
         </nav>
-        <MobileMenu client:load transition:persist />
-        <MoreDropdown client:load transition:persist />
-        <ModeToggle client:load transition:persist />
+        <MobileMenu client:idle transition:persist />
+        <MoreDropdown client:idle transition:persist />
+        <ModeToggle client:idle transition:persist />
       </div>
     </div>
   </Container>
