--- a/src/components/BlogCard.astro
+++ b/src/components/BlogCard.astro
@@ -55,7 +55,7 @@ const readTime = readingTime(entry.body);
     href={`/${entry.collection}/${entry.slug}`}
     class="flex flex-col gap-4 sm:flex-row"
   >
-  {entry.data.image && (
+  {entry.data.thumbnail && (
     <div class="relative max-w-[200px] sm:flex-shrink-0 relative">
       <div
         class="placeholder rounded-xl bg-gray-200 dark:bg-gray-900"
@@ -66,7 +66,7 @@ const readTime = readingTime(entry.body);
         </div>
       </div>
       <Image 
-        src={entry.data.image}
+        src={entry.data.thumbnail}
         alt=""
         width={1200}
         height={630}
