--- a/src/pages/about/index.astro
+++ b/src/pages/about/index.astro
@@ -35,11 +35,13 @@ const authorsData = authors.map(author => ({
       <div class="lg:w-1/4">
         <h2 class="text-xl font-semibold text-gray-600 mb-3">
           <a
-            href="https://www.goodreads.com/review/list/152185079-sadman-hossain?shelf=read&sort=date_read&order=d"
+            href="https://www.goodreads.com/user/show/152185079-sadman-hossain"
             target="_blank"
-            class="inline-flex items-center px-3 py-0.5 rounded-full text-sm font-medium border bg-[#f9f6f2] text-[#723c0c] border-[#723c0c]/25 dark:bg-[#723c0c] dark:text-[#f9f6f2] dark:border-[#f9f6f2]/25"
+            class="inline-flex items-center px-3 py-0.5 rounded-full text-sm font-medium border bg-[#f9f6f2] text-[#723c0c] border-[#723c0c]/25 dark:bg-[#723c0c] dark:text-[#f9f6f2] dark:border-[#f9f6f2]/25 relative transition-transform transform hover:opacity-70"
           >
-            Goodreads Activity
+            <span class="absolute left-2 h-2 w-2 rounded-full bg-[#723c0c] dark:bg-[#f9f6f2] animate-ping duration-1400"></span>
+            <span class="absolute left-2 h-2 w-2 rounded-full bg-[#723c0c] dark:bg-[#f9f6f2]"></span>
+            <span class="ml-[10px]">Goodreads Activity</span>
           </a>
         </h2>
         <GoodreadsUserUpdates limit={10} />
@@ -49,7 +51,7 @@ const authorsData = authors.map(author => ({
           <a
             href="https://www.goodreads.com/review/list/152185079-sadman-hossain?shelf=read&sort=date_read&order=d"
             target="_blank"
-            class="inline-flex items-center px-3 py-0.5 rounded-full text-md font-medium border bg-[#723c0c] text-[#f9f6f2] border-[#f9f6f2]/25 dark:bg-[#f9f6f2] dark:text-[#723c0c] dark:border-[#723c0c]/25"
+            class="inline-flex items-center px-3 py-0.5 rounded-full text-md font-medium border bg-[#723c0c] text-[#f9f6f2] border-[#f9f6f2]/25 dark:bg-[#f9f6f2] dark:text-[#723c0c] dark:border-[#723c0c]/25 relative transition-transform transform hover:opacity-70"
           >
           Goodreads: Latest Reads
           </a>
