--- a/src/components/TableOfContents.astro
+++ b/src/components/TableOfContents.astro
@@ -67,9 +67,9 @@ function buildToc(headings: Heading[]): Heading[] {
   class="sticky top-[5.5rem] col-start-1 hidden h-[calc(100vh-5.5rem)] text-xs leading-4 xl:block"
 >
   <div class="flex justify-end">
-    <ScrollArea client:idle className="max-h-[calc(100vh-8rem)]" type="always">
+    <ScrollArea client:idle className="max-h-[calc(100vh-7rem)]" type="always">
       <ul
-        class="flex flex-col justify-end gap-y-2 overflow-y-auto px-8"
+        class="flex flex-col justify-end gap-y-2 overflow-y-auto px-8 mt-4"
         id="toc-container"
       >
         <li>
