feat: add marquee component

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -25,7 +25,7 @@ const latestPost = sortedPosts[0];
   >
   {latestPost && (
     <Banner
-      client:idle
+      client:only="react"
       text={`Latest post: ${latestPost.data.title}`}
       link={`/posts/${latestPost.slug}`}
     />
