post(april-cools): add WIP post

--- a/src/components/TableOfContents.astro
+++ b/src/components/TableOfContents.astro
@@ -69,7 +69,7 @@ function buildToc(headings: Heading[]): Heading[] {
   <div class="flex justify-end">
     <ScrollArea client:idle className="max-h-[calc(100vh-7rem)]" type="always">
       <ul
-        class="flex flex-col justify-end gap-y-2 overflow-y-auto px-8 mt-4"
+        class="flex bg-background flex-col justify-end gap-y-2 overflow-y-auto px-8 mt-4"
         id="toc-container"
       >
         <li>
