--- a/src/components/mdx/Marquee.astro
+++ b/src/components/mdx/Marquee.astro
@@ -3,6 +3,7 @@ import MarqueeWrapper from "@/components/magicui/marqueewrapper.tsx";
 
 // Define a Props interface for clarity (optional but helpful for TypeScript)
 export interface Props {
+  transform?: string;
   reviews?: {
     name: string;
     body: string;
@@ -11,33 +12,34 @@ export interface Props {
 
 // Default reviews array
 const defaultReviews: Props['reviews'] = [
-{
+  {
     name: "@jack",
     body: "I've never seen anything like this before. It's amazing. I love it.",
-},
-{
+  },
+  {
     name: "@jill",
     body: "I don't know what to say. I'm speechless. This is amazing.",
-},
-{
+  },
+  {
     name: "@john",
-    body: "I'm at a loss for words. This is amazing. I love it. I've never seen anything like this before. It's amazing. I love it. I've never seen anything like this before. It's amazing. I love it. I've never seen anything like this before. It's amazing. I love it. I've never seen anything like this before. It's amazing. I love it.",
-},
-{
+    body: "I'm at a loss for words. This is amazing. I love it. I've never seen anything like this before. It's amazing. I love it.",
+  },
+  {
     name: "@jane",
-    body: "I'm at a loss for words. This is amazing. I love it. I've never seen anything like this before. It's amazing. I love it. I've never seen anything like this before. It's amazing. I love it. I've never seen anything like this before. It's amazing. I love it. I've never seen anything like this before. It's amazing. I love it.",
-},
-{
+    body: "I'm at a loss for words. This is amazing. I love it. I've never seen anything like this before. It's amazing. I love it.",
+  },
+  {
     name: "@jenny",
-    body: "I'm at a loss for words. This is amazing. I love it. I've never seen anything like this before. It's amazing. I love it. I've never seen anything like this before. It's amazing. I love it.",
-},
-{
+    body: "I'm at a loss for words. This is amazing. I love it. I've never seen anything like this before. It's amazing. I love it.",
+  },
+  {
     name: "@james",
     body: "I'm at a loss for words. This is amazing. I love it.",
-},
+  },
 ];
 
 const reviews = Astro.props.reviews ?? defaultReviews;
+const transform = Astro.props.transform ?? "translateX(-100px) translateY(0px) translateZ(-100px) rotateX(15deg) rotateY(-7deg) rotateZ(15deg)";
 ---
 
-<MarqueeWrapper reviews={reviews} />
+<MarqueeWrapper transform={transform} reviews={reviews} />
