--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -17,6 +17,7 @@ const projectOrder = [
   'pey-2023-dashboard/pey-2023-dashboard',
   'fricdl/fricdl',
   'libstreetmap/libstreetmap',
+  'work-study-2025-summer/work-study-2025-summer',
   'work-study-2024/work-study-2024',
 ];
 
