feat: add UofT webring to footer

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -22,5 +22,30 @@ import WebsiteCarbon from '@/components/mdx/WebsiteCarbon.astro'
     >
       <WebsiteCarbon co2="0.20" percentage="79"/>
     </div>
+
+    <!-- Webring widget -->
+    <div
+      class="mt-4 flex items-center justify-center gap-4 bg-gray-50 p-4 rounded-lg border border-gray-200
+             dark:bg-gray-800 dark:border-gray-700"
+    >
+      <a
+        href="https://webring.ayanali.net/#https://sadman.ca?nav=prev"
+        class="text-gray-800 text-2xl hover:text-gray-500 dark:text-gray-200 dark:hover:text-gray-400"
+      >←</a>
+      <a
+        href="https://webring.ayanali.net/#https://sadman.ca"
+        target="_blank"
+      >
+        <img
+          src="https://webring.ayanali.net/img/icon.svg"
+          alt="UofT Webring SKULE Website Phone Book"
+          class="w-8 h-8 filter dark:invert"
+        />
+      </a>
+      <a
+        href="https://webring.ayanali.net/#https://sadman.ca?nav=next"
+        class="text-gray-800 text-2xl hover:text-gray-500 dark:text-gray-200 dark:hover:text-gray-400"
+      >→</a>
+    </div>
   </Container>
 </footer>
